--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ember/optional-features": "^0.7.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-ajax": "^5.0.0",
+    "ember-browserify": "^1.2.2",
     "ember-cli": "~3.12.0",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.7.3",
@@ -33,6 +34,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
+    "ember-d3": "^0.5.1",
     "ember-data": "~3.12.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
@@ -48,5 +50,9 @@
   },
   "engines": {
     "node": "8.* || >= 10.*"
+  },
+  "dependencies": {
+    "d3": "^5.11.0",
+    "wft-geodb-js-client": "^1.3.2"
   }
 }
